middle of the Log in page

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </div>
 
     <header class="welcome-header">
-      <h1 class="welcome-heder__title">Welcome to Kokoa Clone</h1>
-      <p class="welcome-heder__text">
+      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <p class="welcome-header__text">
         If you have a Kokoa Account, log in with your email or phone number.
       </p>
     </header>
@@ -34,6 +34,7 @@
       <input type="text" placeholder="Email or phone number" />
       <input type="password" placeholder="password" />
       <input type="submit" value="Log In" />
+      <input type="submit" value="Sign up" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
 
