user-component friends profile

--- a/friends.html
+++ b/friends.html
@@ -32,6 +32,48 @@
       </div>
     </header>
 
+    <a id="friends-display-link"
+      ><i class="fas fa-info-circle"></i>Friends' Names Display
+      <i class="fas fa-chevron-right fa-sm"></i>
+    </a>
+
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="screenshots/profile.jpg"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">최현서</h4>
+            <!-- <h6 class="user-component__subtitle">hello i'm hyun seo</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header"></div>
+        <span>Channel</span>
+        <i class="fas fa-chevron-up fa-sm"></i>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="screenshots/profile.jpg"
+            class="user-component__avatar user-component__avatar--xm"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title user-component__title--not-bolt">
+              Channel
+            </h4>
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+        <span>2</span>
+        <i class="fas fa-chevron-right fa-sm"></i>
+      </div>
+    </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
