--- a/friends.html
+++ b/friends.html
@@ -98,7 +98,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
-            <span class="nav__ellipsis--notif"></span>
+            <span class="nav__ellipsis--notif red-notification"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i>
           </a>
         </li>
