--- a/chats.html
+++ b/chats.html
@@ -37,7 +37,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="screenshots/profile.jpg"
+            src="screenshots/profile2.png"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
