--- a/friends.html
+++ b/friends.html
@@ -41,7 +41,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="screenshots/profile.jpg"
+            src="screenshots/profile2.png"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
@@ -60,7 +60,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="screenshots/profile.jpg"
+            src="screenshots/profile2.png"
             class="user-component__avatar user-component__avatar--sm"
           />
           <div class="user-component__text">
