--- a/chats.html
+++ b/chats.html
@@ -34,7 +34,7 @@
     </header>
 
     <main class="main-screen">
-      <a href="screens/chat.html">
+      <a href="chat.html">
         <div class="user-component">
           <div class="user-component__column">
             <img
@@ -42,7 +42,7 @@
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">KokoaTalk</h4>
+              <h4 class="user-component__title">최현서</h4>
               <h6 class="user-component__subtitle">
                 Please check My Kokoa Account Info
               </h6>
